--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ server.port = 8090
 spring.datasource.url=jdbc:mysql://localhost:3306/starmart?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+
+## Hibernate properties
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
