One to One Mapping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,2 @@
-#port
-server.port = 8090
-
-#MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/starmart?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
-
-## Hibernate properties
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.open-in-view=false
+#profiles
+spring.profiles.active=dev
