SonarCube & Email Functionality

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,3 +15,15 @@ spring.jpa.open-in-view=false
 third.party.api.gettodos = https://jsonplaceholder.typicode.com/todos/1
 
 # Dev (24.03) QA (24.02) UAT(24.02) PROD (24.01)
+
+#mail pcee dysb koig wtkb
+spring.mail.host= smtp.gmail.com
+spring.mail.port= 587
+spring.mail.username= yogeshlokare94@gmail.com
+spring.mail.password= hjbr cljp moxh tmve  
+spring.mail.properties.mail.smtp.auth= true
+spring.mail.properties.mail.smtp.starttls.enable= true
+
+#change your mail ( #app password of gamil)
+#create one simple design html template
+#send attahcment via email
